--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aware.plugin.app2016"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.aware.plugin.app2016">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -9,12 +8,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
     <application android:allowBackup="true" android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        android:theme="@style/Theme.Aware"
-        tools:replace="android:icon, android:theme">
+        android:icon="@drawable/ic_launcher">
 
         <service android:name="com.aware.plugin.app2016.Plugin" android:exported="true" />
         <provider android:name="com.aware.plugin.app2016.Provider"
